# policies

./: .gitignore  .release-please-manifest-free.json  .release-please-manifest-paid.json  .release-please-manifest-premium.json  .release-please-manifest.json  CODEOWNERS  Makefile  README.md  release-please-config-free.json  release-please-config-paid.json  release-please-config-premium.json  release-please-config.json
.github/: .kodiak.toml  ISSUE_TEMPLATE  clickhouse.xml  pr_labeler.yml  renovate.json5
.github/workflows/: changed_files.yml  pr_title.yml  release_pr.yml  (+51 more)
azure_compliance/: dbt_project.yml  profiles.yml
dbt-docs-site/: aws-asset-inventory-free.html  aws-compliance-free.html  aws-compliance-premium.html  aws-cost.html  aws-data-resilience.html  aws-encryption.html  azure-compliance-free.html  azure-compliance-premium.html  gcp-compliance-free.html  gcp-compliance-premium.html  k8s-compliance-free.html  k8s-compliance-premium.html  profiles.yml  vercel.json
k8s/: create_k8s_policy_results.sql
scripts/: update-checks-readme.sh
to_migrate/: aws_encryption.sql
transformations/: .gitignore  Makefile
transformations/aws/asset-inventory-free/: .dbtignore  CHANGELOG.md  README.md  dbt_project.yml  manifest.json  pyproject.toml  requirements.txt
transformations/aws/asset-inventory-free/macros/: aws_asset_resources.sql  aws_tables_dyn.sql
transformations/aws/asset-inventory-free/models/: aws_resources.sql
transformations/aws/asset-inventory-free/tests/: bigquery.yml  bigquery.yml.bak  clickhouse.yml  postgres.yml  profiles.yml  snowflake.yml
(+2252 files in other folders)
