[project]
name = "aws-asset-inventory-free"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dbt-postgres==1.10.0",
    "dbt-snowflake==1.11.4",
    "dbt-bigquery==1.11.1",
    "dbt-clickhouse==1.10.0",
    "dbt-core==1.11.8",
]

[tool.uv]
exclude-newer = "1 week"

override-dependencies = [
    "dbt-adapters>=1.19.0,<2.0",
]
