[project]
name = "aws-asset-inventory-free"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dbt-postgres==1.10.2",
    "dbt-snowflake==1.11.6",
    "dbt-bigquery==1.11.3",
    "dbt-clickhouse==1.10.1",
    "dbt-core==1.11.11",
]

[tool.uv]
exclude-newer = "1 week"

override-dependencies = [
    "dbt-adapters>=1.19.0,<2.0",
]
